--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     <h2>Portfólio</h2>
     <figure>
       <img class="img-portfolio" src="./img/IMG_1782.JPG" alt="eCommerce">
-      <figcaption>Templo dos Gatos</figcaption>
+      <figcaption>eCommerce</figcaption>
     </figure>
     <figure>
       <img class="img-portfolio" src="./img/IMG_1777.JPG" alt=">Mobile">
-      <figcaption>Gatos</figcaption>
+      <figcaption>Mobile</figcaption>
     </figure>
     <figure>
       <img class="img-portfolio" src="./img/IMG_1778.JPG" alt="Web design">
-      <figcaption>Gatos</figcaption>
+      <figcaption>Web design</figcaption>
     </figure>
     <figure>
       <img class="img-portfolio" src="./img/IMG_1779.JPG" alt="Projetos pessoais">
-      <figcaption>e mais gatos</figcaption>
+      <figcaption>Projetos pessoais</figcaption>
     </figure>
 
   </section>
