--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lucas Seiti</title>
-  <link rel="stylesheet" href="css/Estilos.css">
+  <link rel="stylesheet" type="text/css" href="css/Estilos.css">
+  <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Roboto:wght@400;700&family=Special+Elite&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -21,9 +22,10 @@
     <div>
           <h1 class="site-title">Lucas Seiti</h1>
           <h2 class="site-subtitle">Jr. fronted developer</h2>
+          <h2 class="site-subtitle">Cursando Design</h2>
     </div>
   </header>
-  <section>
+  <section class="portfolio">
 
     <h2>Portfólio</h2>
     <figure>
