--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <div>
           <h1 class="site-title">Lucas Seiti</h1>
-          <h2 class="site-subtitle">Jr. fronted developer</h2>
+          <h2 class="site-subtitle">Jr. Front-end Developer</h2>
           <h2 class="site-subtitle">Cursando Design</h2>
     </div>
   </header>
