--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lucas Seiti</title>
-  <link rel="stylesheet" type="text/css" href="css/Estilos.css">
+  <link rel="stylesheet" href="CSS/estilos.css">
   <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Roboto:wght@400;700&family=Special+Elite&display=swap" rel="stylesheet">
 </head>
 
