--- a/index.html
+++ b/index.html
@@ -28,23 +28,25 @@
   <section class="portfolio">
 
     <h2>Portfólio</h2>
-    <figure>
-      <img class="img-portfolio" src="./img/IMG_1782.JPG" alt="eCommerce">
-      <figcaption>eCommerce</figcaption>
-    </figure>
-    <figure>
-      <img class="img-portfolio" src="./img/IMG_1777.JPG" alt=">Mobile">
-      <figcaption>Mobile</figcaption>
-    </figure>
-    <figure>
-      <img class="img-portfolio" src="./img/IMG_1778.JPG" alt="Web design">
-      <figcaption>Web design</figcaption>
-    </figure>
-    <figure>
-      <img class="img-portfolio" src="./img/IMG_1779.JPG" alt="Projetos pessoais">
-      <figcaption>Projetos pessoais</figcaption>
-    </figure>
 
+    <div class="grid">
+      <figure>
+        <img class="img-portfolio" src="./img/IMG_1782.JPG" alt="eCommerce">
+        <figcaption>eCommerce</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/IMG_1777.JPG" alt=">Mobile">
+        <figcaption>Mobile</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/IMG_1778.JPG" alt="Web design">
+        <figcaption>Web design</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/IMG_1779.JPG" alt="Projetos pessoais">
+        <figcaption>Projetos pessoais</figcaption>
+      </figure>
+    </div>
   </section>
 </body>
 
