--- a/index.html
+++ b/index.html
@@ -7,25 +7,27 @@
   <title>Lucas Seiti</title>
   <link rel="stylesheet" href="CSS/estilos.css">
   <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Roboto:wght@400;700&family=Special+Elite&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/6d6952c5be.js" crossorigin="anonymous"></script>
 </head>
+
 
 <body>
 
   <header>
     <nav class="menu">
       <ul>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Portfólio</a></li>
-        <li><a href="#">Contato</a></li>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#portfolio">Portfólio</a></li>
+        <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
-    <div>
+    <div class="titulo">
           <h1 class="site-title">Lucas Seiti</h1>
           <h2 class="site-subtitle">Jr. Front-end Developer</h2>
           <h2 class="site-subtitle">Cursando Design</h2>
     </div>
   </header>
-  <section class="portfolio">
+  <section class="portfolio" id="portfolio">
 
     <h2>Portfólio</h2>
 
@@ -46,6 +48,25 @@
         <img class="img-portfolio" src="./img/IMG_1779.JPG" alt="Projetos pessoais">
         <figcaption>Projetos pessoais</figcaption>
       </figure>
+    </div>
+  </section>
+  
+  <section class="contato" id="contato">
+    <h2>Contato</h2>
+    <div class="grid icons">
+      
+      <a target="_blank" href="https://github.com/vanessametonini">
+        <i class="fab fa-github"></i>
+      </a>
+      <a target="_blank" href="https://twitter.com/vanessametonini">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a target="_blank" href="https://linkedin.com/in/vanessametonini">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="mailto:vanessa.tonini@caelum.com.br">
+        <i class="fab fa-instagram"></i>
+      </a>
     </div>
   </section>
 </body>
