--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
     <h2>Contato</h2>
     <div class="grid icons">
       
-      <a target="_blank" href="https://github.com/vanessametonini">
+      <a target="_blank" href="https://github.com/LuckSet">
         <i class="fab fa-github"></i>
       </a>
-      <a target="_blank" href="https://twitter.com/vanessametonini">
+      <a target="_blank" href="https://twitter.com/login?lang=pt">
         <i class="fab fa-twitter"></i>
       </a>
-      <a target="_blank" href="https://linkedin.com/in/vanessametonini">
+      <a target="_blank" href="https://www.linkedin.com/in/lucas-seiti-takahara-07b1731a4">
         <i class="fab fa-linkedin"></i>
       </a>
       <a href="mailto:vanessa.tonini@caelum.com.br">
-        <i class="fab fa-instagram"></i>
+        <i class=""></i>
       </a>
     </div>
   </section>
